--- a/zh_TW.po
+++ b/zh_TW.po
@@ -735,10 +735,11 @@ msgstr "過濾器："
 msgid "Pause"
 msgstr "暫停"
 
+# NOTE: from old po file
 #, c-format
 msgid "File Transfers - %d%% of %d file"
 msgid_plural "File Transfers - %d%% of %d files"
-msgstr[0] ""
+msgstr[0] "檔案傳輸：%2$d 個檔案完成了 %1$d%%"
 
 #. Create the window.
 msgid "File Transfers"
@@ -2184,7 +2185,7 @@ msgid "A non-recoverable Farsight2 error has occurred."
 msgstr "發生了一個嚴重的 Farsight2 錯誤。"
 
 msgid "A non-recoverable Farstream error has occurred."
-msgstr ""
+msgstr "發生了一個不可恢復的 Farstream 錯誤。"
 
 msgid "Error with your microphone"
 msgstr "您的麥克風出現錯誤"
@@ -2200,7 +2201,7 @@ msgid "Error creating session: %s"
 msgstr "建立通話工作階段失敗：%s"
 
 msgid "Could not create media pipeline"
-msgstr ""
+msgstr "無法建位媒體管線"
 
 #. Translators: This is a noun that refers to one
 #. * possible audio input device. The device can help the
@@ -3533,27 +3534,27 @@ msgstr "來自 %s 的 Wallops"
 
 #, c-format
 msgid "Failed to initialize SASL authentication: %s"
-msgstr ""
+msgstr "無法為 SASL 認證初始化：%s"
 
 msgid "SASL authentication failed: No worthy authentication mechanisms found."
-msgstr ""
+msgstr "SASL 認證失敗：找不到值得使用的認證機制"
 
 #, c-format
 msgid "SASL authentication failed: %s"
-msgstr ""
+msgstr "SASL 認證失敗：%s"
 
 msgid ""
 "SASL authentication failed: Server does not support SASL authentication."
-msgstr ""
+msgstr "SASL 認證失敗：伺服器並不支援 SASL 認證"
 
 msgid "SASL authentication failed: Initializing SASL failed."
-msgstr ""
+msgstr "SASL 認證失敗：無法為 SASL 初始化"
 
 msgid "Incorrect Password"
 msgstr "密碼錯誤"
 
 msgid "SASL authentication failed: No worthy mechanisms found"
-msgstr ""
+msgstr "SASL 認證失敗：找不到值得使用的機制"
 
 msgid "action &lt;action to perform&gt;:  Perform an action."
 msgstr "action &lt;要執行的動作&gt;：執行一個動作。"
@@ -4777,16 +4778,16 @@ msgstr "請指定檔案應該傳送至 %s 的那一個 Resource"
 
 #, c-format
 msgid "The queue for %s has reached its maximum length of %u."
-msgstr ""
+msgstr "%s佇列目前長度為 %u，已達上限"
 
 msgid "XMPP stream management"
 msgstr "XMPP 串流管理"
 
 msgid "Stanza queue is full"
-msgstr ""
+msgstr "段落佇列已滿"
 
 msgid "No further messages will be queued"
-msgstr ""
+msgstr "訊息將不能再加入佇列中"
 
 msgid "Afraid"
 msgstr "害怕"
@@ -5952,6 +5953,7 @@ msgstr ""
 "您在未登入完成前要求修改您的個人資訊，所以這些資訊並未被修改。請在完成登入後"
 "再重新進行設定。"
 
+# NOTE: from old po file
 #, c-format
 msgid ""
 "The maximum profile length of %d byte has been exceeded.  It has been "
@@ -5959,11 +5961,12 @@ msgid ""
 msgid_plural ""
 "The maximum profile length of %d bytes has been exceeded.  It has been "
 "truncated for you."
-msgstr[0] ""
+msgstr[0] "個人資訊的長度超出了 %d 個位元組的上限，過長部分已被截去。"
 
 msgid "Profile too long."
 msgstr "個人資訊過長。"
 
+# NOTE: from old po file
 #, c-format
 msgid ""
 "The maximum away message length of %d byte has been exceeded.  It has been "
@@ -5971,7 +5974,7 @@ msgid ""
 msgid_plural ""
 "The maximum away message length of %d bytes has been exceeded.  It has been "
 "truncated for you."
-msgstr[0] ""
+msgstr[0] "離開訊息的長度超出了 %d 個位元組的上限，過長部分已被截去。"
 
 msgid "Away message too long."
 msgstr "離開訊息過長。"
@@ -6181,9 +6184,8 @@ msgstr "用戶端登入"
 msgid "Kerberos"
 msgstr "Kerberos"
 
-# FIXME
 msgid "MD5-based"
-msgstr "以MD5為基礎"
+msgstr "基於 MD5 算法"
 
 msgid "Authentication method"
 msgstr "認證方法"
@@ -6608,7 +6610,7 @@ msgid "Topic:"
 msgstr "主題："
 
 msgid "A server is required to connect this account"
-msgstr ""
+msgstr "必須設定伺服器，才能啟動帳號"
 
 #, c-format
 msgid "Unknown (0x%04x)<br>"
@@ -8555,11 +8557,12 @@ msgstr "聊天室中有人提到您的暱稱而您未讀該訊息時聊天室名
 msgid "The text information for a buddy's status"
 msgstr "好友狀態的字體及文字顏色"
 
+# NOTE: adapted from old po file (adapted for nplurals=1)
 #, c-format
 msgid "You have %d contact named %s. Would you like to merge them?"
 msgid_plural ""
 "You currently have %d contacts named %s. Would you like to merge them?"
-msgstr[0] ""
+msgstr[0] "您目前有 %d 個稱為「%s」的聯絡人，您要把聯絡人合併嗎？"
 
 msgid ""
 "Merging these contacts will cause them to share a single entry on the buddy "
@@ -8923,11 +8926,12 @@ msgstr "SSL 常見問題"
 msgid "Welcome back!"
 msgstr "歡迎歸來！"
 
+# NOTE: from old po file
 #, c-format
 msgid "%d account was disabled because you signed on from another location:"
 msgid_plural ""
 "%d accounts were disabled because you signed on from another location:"
-msgstr[0] ""
+msgstr[0] "%d個帳已被停用，因為您由其他的地方登入："
 
 msgid "<b>Username:</b>"
 msgstr "<b>使用者名稱：</b>"
@@ -9894,6 +9898,7 @@ msgstr "給聊天室改別名"
 msgid "Enter an alias for this chat."
 msgstr "請為這個聊天室輸入一個別名。"
 
+# NOTE: from old po file
 #, c-format
 msgid ""
 "You are about to remove the contact containing %s and %d other buddy from "
@@ -9902,6 +9907,8 @@ msgid_plural ""
 "You are about to remove the contact containing %s and %d other buddies from "
 "your buddy list.  Do you want to continue?"
 msgstr[0] ""
+"您正試著將好友 %s 及包含在同一個聯絡人的其他 %d 個好友從您的好友清單中移除。"
+"您要繼續這個動作嗎？"
 
 msgid "Remove Contact"
 msgstr "移除聯絡人"
@@ -11247,34 +11254,34 @@ msgid "Select Folder..."
 msgstr "選擇資料匣..."
 
 msgid "Screen share error"
-msgstr ""
+msgstr "螢幕共享發生錯誤"
 
 msgid "Error creating screencast request"
-msgstr ""
+msgstr "建立螢幕共享要求時發生錯誤"
 
 msgid "OpenPipeWireRemote request failed"
-msgstr ""
+msgstr "OpenPipeWireRemote 要求失敗"
 
 msgid "No file descriptor found"
-msgstr ""
+msgstr "找不到檔案描述符"
 
 msgid "Screencast \"Start\" failed"
-msgstr ""
+msgstr "螢幕共享無法「開始」(Start)"
 
 msgid "Screencast \"SelectSources\" failed"
-msgstr ""
+msgstr "螢幕共享無法「選擇來源」(SelectSources)"
 
 msgid "Screencast \"CreateSession\" failed."
-msgstr ""
+msgstr "螢幕共享無法「建立工作階段」(CreateSession)"
 
 msgid "Test image"
 msgstr ""
 
 msgid "Select window"
-msgstr ""
+msgstr "選擇視窗"
 
 msgid "Use monitor"
-msgstr ""
+msgstr "使用顯示器"
 
 #, c-format
 msgid "%s (%d✕%d @ %d,%d)"
@@ -11302,7 +11309,7 @@ msgid "Title already in use.  You must choose a unique title."
 msgstr "目前標題正在使用中。您必須選取一個唯一的標題。"
 
 msgid "Different"
-msgstr "差異"
+msgstr "使用不同狀態"
 
 msgid "_Title:"
 msgstr "標題(_T)："
@@ -11320,7 +11327,7 @@ msgstr "儲存並使用(_V)"
 
 #, c-format
 msgid "Status for %s"
-msgstr "狀態：%s"
+msgstr "%s 的狀態設定"
 
 #, c-format
 msgid ""
@@ -12225,18 +12232,18 @@ msgid "Provides access to commonly used gtkrc settings."
 msgstr "提供一般 gtkrc 設定的存取"
 
 msgid "Raw"
-msgstr ""
+msgstr "原始模式"
 
 msgid "Lets you send raw input to text-based protocols."
-msgstr "讓您直接輸入指令對各種文字模式的通訊協定進行操作。"
+msgstr "讓您使用文字為基的通訊協定時，可以使用原始指令。"
 
 # NOTE: from old po file
 msgid ""
 "Lets you send raw input to text-based protocols (XMPP, IRC, TOC). Hit "
 "'Enter' in the entry box to send. Watch the debug window."
 msgstr ""
-"讓您直接輸入指令對各種文字模式的通訊協定（例如 XMPP、IRC 及 TOC）進行操"
-"作。在輸入欄位輸入指令，按 Enter 後鍵送出；相關資訊會在除錯視窗顯示。"
+"讓您使用各種文字為基的通訊協定時（例如 XMPP、IRC 及 TOC），可以直接輸入原始指令進行操"
+"作。在輸入欄位輸入指令，按 Enter 鍵送出，相關資訊會在除錯視窗顯示。"
 
 #, c-format
 msgid "You can upgrade to %s %s today."
