--- a/zh_TW.po
+++ b/zh_TW.po
@@ -2159,6 +2159,7 @@ msgid ""
 "Error initializing the call. This probably denotes problem in installation "
 "of GStreamer or Farsight."
 msgstr ""
+"給呼叫進行初始化時出現了錯誤，這可能表示 GStreamer 或 Farsight 的安裝出現了問題。"
 
 msgid "Network error."
 msgstr "網路錯誤。"
@@ -2971,10 +2972,13 @@ msgstr ""
 "找不到 ActiveTCL；如果打算使用 TCL 寫成的模組，請到 http://www.activestate."
 "com 下載及安裝 ActiveTCL。\n"
 
+# NOTE: adapted from old po file (adapted for new URL)
 msgid ""
 "Unable to find Apple's \"Bonjour for Windows\" toolkit, see https://"
 "developer.pidgin.im/BonjourWindows for more information."
 msgstr ""
+"找不到 Apple 的「Bonjour For Windows」工具，詳情請到網址 https://developer.pidgin.im/"
+"BonjourWindows 查閱。"
 
 msgid "Unable to listen for incoming IM connections"
 msgstr "無法監聽來訊的即時訊息連線"
@@ -10417,6 +10421,17 @@ msgid ""
 "how to get the backtrace, please read the instructions at\n"
 "%swiki/GetABacktrace\n"
 msgstr ""
+"%s %s 出現了一個區段錯誤，並已嘗試倒出一個 core（磁心）檔案。\n"
+"這表示本軟體內存有錯誤，您什麼也沒有做錯。\n"
+"\n"
+"假如您發現令故障重現的方法，請知會開發者，方法是透過以下的網址\n"
+"回報錯誤：\n"
+"%ssimpleticket/\n"
+"\n"
+"回報錯誤時，請務必說明出現錯誤前您在做什麼，並請附上 core 檔的\n"
+"backtrace （函式呼叫順序）。如果您不知道怎樣取得 backtrace，請\n"
+"參閱下列網頁的說明：\n"
+"%swiki/GetABacktrace\n"
 
 #, c-format
 msgid "Exiting because another libpurple client is already running.\n"
