--- a/zh_TW.po
+++ b/zh_TW.po
@@ -3955,6 +3955,7 @@ msgstr "本地端時間："
 msgid "Priority"
 msgstr "優先次序"
 
+# NOTE: XMPP jargon. Does not seem to have any official translation
 msgid "Resource"
 msgstr ""
 
@@ -12601,12 +12602,13 @@ msgid ""
 msgstr ""
 "這個模組可以讓交談視窗及好友清單產生半透明的效果。"
 
+# FIXME - 警報 is supposed to be the correct IT translation but it sounds totally inappropriate in the context
 #. Alerts
 msgid "Chatroom alerts"
-msgstr ""
+msgstr "聊天室通告"
 
 msgid "Chatroom message alerts _only where someone says your username"
-msgstr ""
+msgstr "有人提到您的帳號才發出聊天室通告"
 
 #. Launcher integration
 msgid "Launcher Icon"
@@ -12621,15 +12623,16 @@ msgstr "在啟動器圖示上顯示未讀訊息的數量(_M)"
 msgid "Show number of unread co_nversations on launcher icon"
 msgstr "在啟動器圖示上顯示未讀交談的數量(_N)"
 
+# NOTE - this is apparently just an icon with no text
 #. Messaging menu integration
 msgid "Messaging Menu"
-msgstr ""
+msgstr "通訊清單"
 
 msgid "Show number of _unread messages for conversations in messaging menu"
-msgstr ""
+msgstr "在通訊清單顯示未讀訊息數量(_U)"
 
 msgid "Show _elapsed time for unread conversations in messaging menu"
-msgstr ""
+msgstr "在通訊清單顯示未讀交談收到訊息是多少時間之前(_E)"
 
 #. *< type
 #. *< ui_requirement
@@ -12648,7 +12651,7 @@ msgstr "提供和 Unity 整合的功能。"
 
 #. *  description
 msgid "Provides integration with Unity's messaging menu and launcher."
-msgstr ""
+msgstr "提供和 Unity 的訊息清單和啟動器的整合功能。"
 
 msgid "_Plugin"
 msgstr "模組(_P)"
