Noted "resource" in style sheet. Update zh-hk

--- a/zh_HK.po
+++ b/zh_HK.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Pidgin\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-09 22:15-0500\n"
-"PO-Revision-Date: 2020-07-20 19:17+0800\n"
+"PO-Revision-Date: 2020-07-20 19:27+0800\n"
 "Last-Translator: Ambrose Li <ambrose.li@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <http://www.transifex.com/pidgin/pidgin/language/zh_HK/>\n"
 "Language: zh_HK\n"
@@ -3884,7 +3884,7 @@ msgstr "優先次序"
 
 # NOTE: XMPP jargon. Does not seem to have any official translation
 msgid "Resource"
-msgstr ""
+msgstr "Resource（用戶端識別號）"
 
 msgid "Uptime"
 msgstr "工作時間"
@@ -4361,7 +4361,7 @@ msgid "Bad Namespace Prefix"
 msgstr "無效的 Namespace Prefix"
 
 msgid "Resource Conflict"
-msgstr "已經以指定的 Resource 在其他地方登入"
+msgstr "Resource 衝突：同一的用戶端識別號在其他地方登入"
 
 msgid "Connection Timeout"
 msgstr "連線已逾時"
@@ -4481,9 +4481,10 @@ msgstr "無法與 %s 進行媒體通話，因為這個 JID 是無效的"
 msgid "Unable to initiate media with %s: user is not online"
 msgstr "無法與 %s 進行媒體通話，因為對方目前沒有連線"
 
+# NOTE: This is jabber. "Resource" is probably the XMPP jargon so a client identifier, not a resource in the usual sense
 #, c-format
 msgid "Unable to initiate media with %s: resource is not online"
-msgstr ""
+msgstr "無法與 %s 進行媒體通話，因為對方目前沒有在指定的用戶端 (Resource) 連線"
 
 #, c-format
 msgid "Unable to initiate media with %s: not subscribed to user presence"
@@ -4496,10 +4497,10 @@ msgstr "媒體通話啟動失敗"
 msgid ""
 "Please select the resource of %s with which you would like to start a media "
 "session."
-msgstr "請指定與 %s 的那一個 Resource 進行媒體通話。"
+msgstr "請指定與 %s 的那一個用戶端 (Resource) 進行媒體通話。"
 
 msgid "Select a Resource"
-msgstr "選擇一個 Resource"
+msgstr "選擇一個用戶端 (Resource)"
 
 msgid "Initiate Media"
 msgstr "媒體通話"
@@ -4701,7 +4702,7 @@ msgstr "無法傳送檔案至 %s，因為未有訂閱對方的狀態資訊"
 
 #, c-format
 msgid "Please select the resource of %s to which you would like to send a file"
-msgstr "請指定檔案應該傳送至 %s 的那一個 Resource"
+msgstr "請指定檔案應該傳送至 %s 的那一個用戶端 (Resource)"
 
 #, c-format
 msgid "The queue for %s has reached its maximum length of %u."
