--- a/zh_TW.po
+++ b/zh_TW.po
@@ -1549,8 +1549,9 @@ msgstr "巢狀分組（實驗性功能）"
 msgid "Provides alternate buddylist grouping options."
 msgstr "為好友清單提供另類的分組顯示方法。"
 
+# XXX tentative
 msgid "Lastlog"
-msgstr ""
+msgstr "回捲搜尋"
 
 #. Translator Note: The "backlog" is the conversation buffer/history.
 msgid "lastlog: Searches for a substring in the backlog."
@@ -1561,7 +1562,7 @@ msgid "GntLastlog"
 msgstr "GntLastlog"
 
 msgid "Lastlog plugin."
-msgstr "Lastlog 模組。"
+msgstr "回捲搜尋模組。"
 
 msgid "accounts"
 msgstr "帳號清單"
@@ -10712,8 +10713,10 @@ msgstr "未知的捕捉事件……請回報這個問題！"
 msgid "(Custom)"
 msgstr "（使用者自訂）"
 
+# NOTE: "Pimps" means "something that is really cool"
+# XXX tentative
 msgid "Penguin Pimps"
-msgstr ""
+msgstr "企鵝之選"
 
 msgid "The default Pidgin sound theme"
 msgstr "預設的 Pidgin 音效主題"
@@ -12216,8 +12219,9 @@ msgstr "為%s選擇字型"
 msgid "GTK+ Interface Font"
 msgstr "GTK+介面字型"
 
+# NOTE: at one point this was actually translated "GTK+ 文字捷徑主題" but this doesn't really make any sense nor describe the thing
 msgid "GTK+ Text Shortcut Theme"
-msgstr ""
+msgstr "GTK+ 按鍵捷徑主題"
 
 msgid "Disable Typing Notification Text"
 msgstr "停用輸入通知"
