--- a/zh_HK.po
+++ b/zh_HK.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Pidgin\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-21 01:51-0400\n"
-"PO-Revision-Date: 2020-07-21 11:57+0800\n"
+"PO-Revision-Date: 2020-07-21 12:11+0800\n"
 "Last-Translator: Ambrose Li <ambrose.li@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <http://www.transifex.com/pidgin/pidgin/language/zh_HK/>\n"
 "Language: zh_HK\n"
@@ -3289,7 +3289,7 @@ msgstr "%s 的主題為：%s"
 
 #, c-format
 msgid "Topic for %s set by %s at %s on %s"
-msgstr "%s 的主題為 %s 於 %4$s %3$s 設定"
+msgstr "%1$s 的主題為 %2$s 於 %4$s %3$s 設定"
 
 #, c-format
 msgid "Unknown message '%s'"
@@ -10144,8 +10144,7 @@ msgid "Unknown.... Please report this!"
 msgstr "不明的捕捉事件……請匯報這個問題！"
 
 #. Dummy strings to make some audio/video sources appear in the PO file
-#, fuzzy
-msgid "Built-in Digital Analog Stereo (HDMI)"
+msgid "Built-in Audio Digital Stereo (HDMI)"
 msgstr "內置數碼立體聲音響 (HDMI)"
 
 msgid "Built-in Audio Analog Stereo"
@@ -10738,7 +10737,7 @@ msgid "Screencast \"CreateSession\" failed."
 msgstr "螢幕共享無法「建立工作階段」(CreateSession)"
 
 msgid "Test image"
-msgstr "測試用影像"
+msgstr "測試用圖像"
 
 msgid "Select window"
 msgstr "選擇視窗"
